# rust-kafka

./: Cargo.toml  send.kafka
src/: main.rs
src/callbacks/: async_callback.rs  mod.rs
src/consumer/: kafka_consumer.rs
src/contracts/: person.rs
