[package]
name = "rust-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.36.2"
tokio = { version = "1.39.3", features = ["full"] }
uuid = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
